# CSCI544-Project-MIDI2Score

./: .gitignore  .gitmodules  README.md  convert.py  evaluation.py  external_midi2score_eval.py  model_2.ipynb  pyproject.toml  requirements.txt  run_seq2seq.py
configs/: encoder_baseline.yaml  seq2seq_10_epoch.yaml  seq2seq_1_epoch.yaml  seq2seq_3_epoch.yaml  seq2seq_baseline.yaml  seq2seq_baseline_sin.yaml  seq2seq_debug.yaml  seq2seq_finetuning.yaml
configs/experiments/: seq2seq_e2e.yaml  seq2seq_e2e_symmetric.yaml  seq2seq_fullft.yaml  seq2seq_fullft_32.yaml  seq2seq_lora.yaml  seq2seq_lora_16.yaml  seq2seq_lora_24.yaml  seq2seq_lora_no_curriculum.yaml
data_preprocessing/: data_splitting.py  dataset_verification.py  pdmx_data_preprocessing.py
docs/: dev.md
hf_dataset/: hf_dataset_eval_generate.py  hf_dataset_example.py  hf_dataset_lmx.py  hf_dataset_seq2seq.py  hf_dataset_seq2seq_truncate.py
midi2score/: __init__.py  config.py  data_seq2seq.py  model_decoder.py  model_seq2seq.py  pred_seq2seq.py  train_seq2seq.py
midi2score/research/: __init__.py  experiment_runner.py
model/: midi_embedding.py  model.py
scripts/: average_checkpoints.py
scripts/eval_examples/: inspect_eval_hf_dataset.py  run_external_model_eval_template.py  run_our_model_eval_example.py
tokenizer/: cpword_tokenizer_config.py  midi_augmentation.py  musicxml_tokenizer.py  tokenization_statistics.py
