[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.8.4",
    "lightning>=2.6.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "peft>=0.18.1",
    "pyyaml>=6.0.3",
    "tensorboard>=2.20.0",
    "torch",
    "torchvision",
    "torchaudio",
    "tqdm>=4.67.3",
    "x-transformers>=2.17.9",
    "linearized-musicxml>=1.0.0",
    "symusic>=0.6.0",
    "miditok>=3.0.6.post1",
    "music21>=9.9.1",
    "transformers>=5.5.4",
    "wandb>=0.26.0",
    "partitura>=1.8.0",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
]
torchaudio = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
]
